# Skippy

./: .gitignore  CMakeLists.txt
Dependencies/glew/: glew.pc
Skippy/: CMakeLists.txt
Skippy/src/: main.cpp
